--- a/QSStep2.html
+++ b/QSStep2.html
@@ -258,8 +258,10 @@
                 </td>
             </tr>
 			 <tr>
-                <th rowspan="1">Mortgage Interest Rate:</th>
-                <td colspan="2">
+                <th  class="tooltipinfo"  rowspan="1" >Mortgage Interest Rate: <img  src="assets/images/information.png"  width="4%" >  <span class="tooltiptext">The default 2.15% is the fixed mortgage interest rate for first 1-3 year normally. You can adjust the interest rate for youself.</span>
+                    </th>
+
+                <td colspan="2" width="50%">
                     <input type="text" class="form-control" id="interest" value="2.15" oninput="cal()" placeholder="(You can modify)" >
                 </td>
             </tr>
@@ -267,9 +269,14 @@
 
 
 
+
+
+
+
+
         <div>
 
-            <button  type="button" id="previewgraph"  class="btnrent" style="margin-left: 870px; ">Preview Interest Rate for each bank</button>
+            <button  type="button" id="previewgraph"  class="btnrent" style="margin-left: 870px;border-radius: 9px; ">Preview Interest Rate for each bank</button>
             <br>
 
             <!-- The Modal -->
