--- a/QSStep8.html
+++ b/QSStep8.html
@@ -107,7 +107,7 @@
             var downpayment = getParameterByName('downpayment');
             var price = getParameterByName('price');
             var ft = getParameterByName('ft');
-            var priceft = getParameterByName('price');
+            var priceft = getParameterByName('priceft');
             var propertyage = parseInt($(input).val());
 
 
