--- a/QSStep9.html
+++ b/QSStep9.html
@@ -517,7 +517,7 @@
 
 
             <tr>
-                <th rowspan="1">Property Price(10K):</th>
+                <th rowspan="1">Property Price:</th>
                 <td colspan="1">
                     <input type="text" class="form-control" id="price" placeholder="(10K)" >
                 </td>
