--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         <link rel="stylesheet" href="assets/css/responsive.css" />
 
         <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+        <script>
+            function submitmsg() {
+                alert("Message Sent! We will get back to you as soon as possible. :)");
+            }
+        </script>
     </head>
     <body data-spy="scroll" data-target=".navbar-collapse">
         <!--[if lt IE 8]>
@@ -116,7 +122,7 @@
                                             <h1>HOUSING MORTGAGE ADVISER</h1>
                                             <p>We Make A Plan For Your Future Housing</p>
                                             <div class="home_btn">
-                                                <a style="padding: 23px 30px 30px;border-radius: 15px;height: 70px;font-size: 16px;text-align: center;line-height: 1.428571429;" href="QSInfo.html" class="btn btn-primary-getstart">►QUICK START◄(For the First-time Buyer)</a>
+                                                <a style="padding: 10px; border-radius: 15px;height: 70px;font-size: 16px;text-align: center;line-height: 1.428571429;" href="QSInfo.html" class="btninfohv">►QUICK START◄ <br>(For the First-time Buyer)</a>
                                             </div>
 
                                         </div>
@@ -124,9 +130,9 @@
                                     <div class="single_home_slider">
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <h1>HOUSING MORTGAGE ADVISER</h1>
-                                            <p>We Make A Plan For Your Future Housing</p>
+                                            <p>We Provide A Current Information For You</p>
                                             <div class="home_btn">
-                                                <a href="" class="btn btn-primary">LEARN MORE</a>
+                                                <a style="padding: 20px; border-radius: 15px;height: 70px;font-size: 16px;text-align: center;line-height: 1.428571429;" href="Mapprice.html" class="btninfohvnt">►18 District Price◄ </a>
                                             </div>
 
                                         </div>
@@ -134,9 +140,9 @@
                                     <div class="single_home_slider">
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <h1>HOUSING MORTGAGE ADVISER</h1>
-                                            <p>We Make A Plan For Your Future Housing</p>
+                                            <p>We Evaluate An Accurate Repayment For You</p>
                                             <div class="home_btn">
-                                                <a href="" class="btn btn-primary">LEARN MORE</a>
+                                                <a style="padding: 20px; border-radius: 15px;height: 70px;font-size: 16px;text-align: center;line-height: 1.428571429;" href="mortgageCal.html" class="btninfobg">►Mortgage Calculator◄ </a>
                                             </div>
 
                                         </div>
@@ -246,10 +252,10 @@
                                                                     <h3>Housing Mortgage Calculator</h3>
                                                                     <div class="separator"></div>
                                                                 </div>
-                                                                <p>Mortgage Loan is used either by purchasers of real property to raise funds to buy real estate,
+                                                                <p  style="font-size: 15px;">Mortgage Loan is used either by purchasers of real property to raise funds to buy real estate,
                                                                     or alternatively by existing property owners to raise funds for any purpose,
                                                                     while putting a lien on the property being mortgaged.</p>
-                                                                <p>The user required to input the details of their mortgage loan,
+                                                                <p  style="font-size: 15px;">The user required to input the details of their mortgage loan,
                                                                     for example: property price, loan-to-value and mortgage years.
                                                                     which is going to determine a mortgage's monthly payments.
                                                                     It also provides a table for repayment timeline. </p>
@@ -260,7 +266,7 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/housingmortgage1.png" alt="" />
+                                                                <img src="assets/images/housingmortgage1.png" style="margin-left: 120px; margin-top: 20px;" alt="" />
                                                             </div>
                                                         </div>
                                                     </div>
@@ -275,7 +281,7 @@
                                                                     <h3>Mortgage Amendment Repayment</h3>
                                                                     <div class="separator"></div>
                                                                 </div>
-                                                                <p>The user required to input the details of their mortgage loan,
+                                                                <p  style="font-size: 15px;">The user required to input the details of their mortgage loan,
                                                                     for example: original mortgage amount, interest rate and original mortgage period
                                                                     which is going to determine that when the user wants to
                                                                     do the partially prepayment or repay all owing value the mortgage payments.  </p>
@@ -286,7 +292,7 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/amendment.png" alt="" />
+                                                                <img src="assets/images/amendment.png" style="margin-left: 120px; margin-top: 20px;" alt="" />
                                                             </div>
                                                         </div>
                                                     </div>
@@ -301,7 +307,7 @@
                                                                     <h3>Mortgage Stress-Test</h3>
                                                                     <div class="separator"></div>
                                                                 </div>
-                                                                <p>The user required to input the details of their mortgage loan,
+                                                                <p  style="font-size: 15px;">The user required to input the details of their mortgage loan,
                                                                     for example: monthly household income, loan tenor,interest rate etc.
                                                                     which is going to determine that will the bank do a mortgage loan for home buyers.
                                                                     Based on the Debt-to-Income ratio (DIT), the percentage will be calculated to decide the application will pass or not.
@@ -313,7 +319,7 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/stresstest.png" alt="" />
+                                                                <img src="assets/images/stresstest.png" style="margin-left: 120px; margin-top: 20px;" alt="" />
                                                             </div>
                                                         </div>
                                                     </div>
@@ -328,11 +334,11 @@
                                                                     <h3>Housing Adviser Guide</h3>
                                                                     <div class="separator"></div>
                                                                 </div>
-                                                                <p>A tool used to determine that the amount of budget that the user can afford.
+                                                                <p style="font-size: 15px;">A tool used to determine that the amount of budget that the user can afford.
                                                                     Based on the personal financial situation and housing requirements to generate a customized plan for the homebuyers.
                                                                     The system will guide you step by step for the evaluation. </p>
-                                                                <p>There are 10 stages for evaluating the user's financial situation and personal requirements.</p>
-                                                                <p><b>It will take about 10-15 minutes for this evaluation.</b> </p>
+                                                                <p  style="font-size: 15px;">There are 10 stages for evaluating the user's financial situation and personal requirements.</p>
+                                                                <p  style="font-size: 15px;"><b>It will take about 15-30 minutes for this evaluation.</b> </p>
 
                                                                 <a href="QSInfo.html" class="btn btn-primary">Start Now!</a>
                                                             </div>
@@ -340,7 +346,7 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/budget.png" alt="" />
+                                                                <img src="assets/images/budget.png" style="margin-left: 120px; margin-top: 20px;" alt="" />
                                                             </div>
                                                         </div>
                                                         <!--                                                        <div id="pentagon"></div>-->
@@ -373,18 +379,24 @@
                 <div class="container">
                     <div class="row">
                         <div class="main_portfolio">
+
                             <div class="col-sm-4">
 
                                 <div class="head_title">
                                 <h3>INFORMATION</h3>
+
                                 <div class="separator"></div>
+                                    <div class="col-sm-12">
+                                        <img src="assets/images/houseinfo.jpg" style="margin-left: 710px; position: absolute;  z-index: 1;">
+                                    </div>
                                 <p><u> <b> <a href="PriceInfo.html" style="line-height: 40px; font-size: 25px"  >Region Property Price</a></b></u></p>
                                 <p><u> <b> <a href="Mapprice.html" style="line-height: 40px; font-size: 25px" >Using Map to Find Property</a></b></u></p>
                                     <p><u> <b> <a href="rentOrbuy.html" style="line-height: 40px; font-size: 25px" >Rent / Purchase Evaluation</a></b></u></p>
 									 <p><u> <b> <a href="interestEvaluate.html" style="line-height: 40px; font-size: 25px" >Interest Rate Scenario</a></b></u></p>
 									 <p><u> <b> <a href="OtherExpense.html" style="line-height: 40px; font-size: 25px" >Other Expenses Calculator</a></b></u></p>
-                            </div>
+                                    <p><u> <b> <a href="mortgageplan.html" style="line-height: 40px; font-size: 25px" >Mortgage Plan Information</a></b></u></p>
 
+                            </div>
 
 
                             </div>
@@ -424,13 +436,8 @@
                                                 <div class="contact_info_content">
                                                     <div class="col-sm-12">
                                                         <div class="single_contact_info">
-                                                            <div class="single_info_icon">
-                                                                <i class="fa fa-home"></i>
-                                                            </div>
-                                                            <div class="single_info_text">
-                                                                <h3>VISIT US</h3>
-                                                                <p>20, 2 Elizabeth ST, Melbourne, Victoria 3000</p>
-                                                            </div>
+
+
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-12">
@@ -440,7 +447,7 @@
                                                             </div>
                                                             <div class="single_info_text">
                                                                 <h3>MAIL US</h3>
-                                                                <p>support@yourmail.com</p>
+                                                                <p>support@logicadviser.com</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -451,21 +458,11 @@
                                                             </div>
                                                             <div class="single_info_text">
                                                                 <h3>CALL US</h3>
-                                                                <p>+(100) 123 4567 890</p>
+                                                                <p>+(852) 2234 5678</p>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-sm-12">
-                                                        <div class="single_contact_info">
-                                                            <div class="single_info_icon">
-                                                                <i class="fa fa-clock-o"></i>
-                                                            </div>
-                                                            <div class="single_info_text">
-                                                                <h3>WORK HOUR</h3>
-                                                                <p>Mon - Sat: 08 Am - 17 Pm</p>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+
                                                 </div>
                                             </div>
                                         </div>
@@ -483,12 +480,12 @@
                                                 <div class="row">
                                                     <div class="col-sm-6">
                                                         <div class="form-group">
-                                                            <input type="text" class="form-control" name="name" placeholder="First Name" required="">
+                                                            <input type="text" class="form-control" name="name" placeholder="First Name" >
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6">
                                                         <div class="form-group">
-                                                            <input type="text" class="form-control" name="name" placeholder="Last Name" required="">
+                                                            <input type="text" class="form-control" name="name" placeholder="Last Name" >
                                                         </div>
                                                     </div>
                                                 </div>
@@ -497,12 +494,12 @@
                                                 <div class="row">
                                                     <div class="col-sm-6">
                                                         <div class="form-group">
-                                                            <input type="email" class="form-control" name="email" placeholder="Email" required="">
+                                                            <input type="email" class="form-control" name="email" placeholder="Email" >
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6">
                                                         <div class="form-group">
-                                                            <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                                                            <input type="text" class="form-control" name="subject" placeholder="Subject" >
                                                         </div>
                                                     </div>
                                                 </div>
@@ -513,7 +510,7 @@
                                                 </div>
 
                                                 <div class="">
-                                                    <input type="submit" value="Submit" class="btn btn-primary">
+                                                    <input type="button" value="Submit" onclick="submitmsg()"  class="btn btn-primary">
                                                 </div>
                                                 <!--</div>--> 
                                             </form>
