--- a/QSStep7.html
+++ b/QSStep7.html
@@ -67,7 +67,7 @@
             $('#ma').attr('value',loanamt)
 
             downpayment = getParameterByName('downpayment');
-            $('#dp').attr('value',downpayment)
+            $('#downpayment').attr('value',downpayment)
 
             price = getParameterByName('price');
             $('#price').attr('value',price)
@@ -220,7 +220,7 @@
                 <input type="hidden" name="wl" value="en">
                 <div >
                     <label style="margin-left: 50px;" for="ma">Mortgage Loan Amount:</label>
-                    <input style="margin-left: 25px;" size=60 type="text" id="ma" name="ma"  placeholder="    (10K)">
+                    <input style="margin-left: 25px;" size=60 type="text" id="ma" name="ma" >
                 </div>
                 <div style="margin-top: 15px; margin-left: 50px;">
                     <label for="dp">Down payment:</label>
